--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       RESERVED YOURDOMAINNAME.COM</font></td>
     <td width="21%" valign="top" bgcolor="#FFFFFF">
       &nbsp;
-      <p align="center"><font face="Arial" size="1">place your images here</font></p>
+      <p align="center"><font face="Arial" size="1">1.jpg</font></p>
       <p align="center">&nbsp;</p>
       <p align="center"><font face="Arial" size="1">place your images here</font></p>
       <p align="center">&nbsp;</p>
